[package]
name = "grapher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "*"
glfw_window_utility = { git = "https://github.com/Anthony-dev570/glfw_window_utility.git" }

mathematics = { git = "https://github.com/Anthony-dev570/mathematics.git" }
graphics = { git = "https://github.com/Anthony-dev570/graphics.git" }
nalgebra-glm = "*"